AW-6, AW-7: Project clean up, CSRF antiforgery implementation, JWT encryption

--- a/src/NCU.AnnualWorks/NCU.AnnualWorks.csproj
+++ b/src/NCU.AnnualWorks/NCU.AnnualWorks.csproj
@@ -22,7 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\lib\NCU.AnnualWorks.Integrations.Usos\NCU.AnnualWorks.Integrations.Usos.csproj" />
+    <ProjectReference Include="..\..\lib\NCU.AnnualWorks.Authentication.JWT.IoC\NCU.AnnualWorks.Authentication.JWT.IoC.csproj" />
+    <ProjectReference Include="..\..\lib\NCU.AnnualWorks.Authentication.OAuth.IoC\NCU.AnnualWorks.Authentication.OAuth.IoC.csproj" />
+    <ProjectReference Include="..\..\lib\NCU.AnnualWorks.Integrations.Usos.IoC\NCU.AnnualWorks.Integrations.Usos.IoC.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
