--- a/lib/NCU.AnnualWorks.Authentication.JWT.IoC/NCU.AnnualWorks.Authentication.JWT.IoC.csproj
+++ b/lib/NCU.AnnualWorks.Authentication.JWT.IoC/NCU.AnnualWorks.Authentication.JWT.IoC.csproj
@@ -8,12 +8,11 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.14" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.14" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.14" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NCU.AnnualWorks.Authentication.OAuth.Core\NCU.AnnualWorks.Authentication.OAuth.Core.csproj" />
+    <ProjectReference Include="..\NCU.AnnualWorks.Authentication.JWT.Core\NCU.AnnualWorks.Authentication.JWT.Core.csproj" />
+    <ProjectReference Include="..\NCU.AnnualWorks.Authentication.JWT\NCU.AnnualWorks.Authentication.JWT.csproj" />
   </ItemGroup>
 
 </Project>
