--- a/lib/NCU.AnnualWorks.Authentication.OAuth.IoC/NCU.AnnualWorks.Authentication.OAuth.IoC.csproj
+++ b/lib/NCU.AnnualWorks.Authentication.OAuth.IoC/NCU.AnnualWorks.Authentication.OAuth.IoC.csproj
@@ -5,15 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.14" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.14" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.14" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.14" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NCU.AnnualWorks.Authentication.OAuth.Core\NCU.AnnualWorks.Authentication.OAuth.Core.csproj" />
+    <ProjectReference Include="..\NCU.AnnualWorks.Authentication.OAuth\NCU.AnnualWorks.Authentication.OAuth.csproj" />
   </ItemGroup>
 
 </Project>
