--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -8,13 +8,36 @@
     }
   },
   "AllowedHosts": "*",
-  "UsosClientOptions": {
+  "UsosServiceOptions": {
     "BaseApiAddress": "https://usosapps.umk.pl/",
-    "RequestTokenEndpoint": "/services/oauth/request_token",
-    "AuthorizeEndpoint": "/services/oauth/authorize",
-    "AccessTokenEndpoint": "/services/oauth/access_token",
+    "DefaultScopes": [
+      "photo",
+      "studies"
+    ],
+    "UsosFields": {
+      "Users": [
+        "id",
+        "first_name",
+        "last_name",
+        "photo_urls[200x200]"
+      ]
+    },
+    "UsosEndpoints": {
+      "RequestToken": "/services/oauth/request_token",
+      "Authorize": "/services/oauth/authorize",
+      "AccessToken": "/services/oauth/access_token",
+      "RevokeToken": "/services/oauth/revoke_token",
+      "TermsSearch": "/services/terms/search",
+      "UsersUser": "/services/users/user",
+      "UsersUsers": "/services/users/users",
+      "CoursesCourseEdition": "services/courses/course_edition",
+      "CoursesIsCoordinator": "services/courses/is_coordinator",
+      "CoursesIsLecturer": "services/courses/is_lecturer",
+      "CoursesIsParticipant": "services/courses/is_participant"
+    },
     "CallbackEndpoint": "/authorize",
-    "CourseKey": "0800-AW",
-    "DefaultAdministratorEmail": "286267@stud.umk.pl"
+    "CourseCode": "0800-PRACMGR-2",
+    "DefaultAdministratorEmail": "286267@stud.umk.pl",
+    "DateFormatPattern": "yyyy-MM-dd"
   }
 }
