--- a/lib/NCU.AnnualWorks.Integrations.Usos.IoC/NCU.AnnualWorks.Integrations.Usos.IoC.csproj
+++ b/lib/NCU.AnnualWorks.Integrations.Usos.IoC/NCU.AnnualWorks.Integrations.Usos.IoC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -6,7 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.14" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.14" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.14" />
   </ItemGroup>
 
   <ItemGroup>
