--- a/lib/NCU.AnnualWorks.Authentication.JWT.IoC/NCU.AnnualWorks.Authentication.JWT.IoC.csproj
+++ b/lib/NCU.AnnualWorks.Authentication.JWT.IoC/NCU.AnnualWorks.Authentication.JWT.IoC.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.14" />
