--- a/src/NCU.AnnualWorks/ClientApp/.env
+++ b/src/NCU.AnnualWorks/ClientApp/.env
@@ -5,3 +5,9 @@ REACT_APP_COPYRIGHT=Company Name
 REACT_APP_API_AUTH_AUTHENTICATE=/api/auth/authenticate
 REACT_APP_API_AUTH_AUTHORIZE=/api/auth/authorize
 REACT_APP_API_AUTH_SIGN_OUT=/api/auth/signout
+REACT_APP_API_KEYWORDS=/api/keywords
+REACT_APP_API_TERMS=/api/terms
+REACT_APP_API_TERMS_CURRENT=/api/terms/current
+REACT_APP_API_USERS_STUDENTS=/api/users/students
+REACT_APP_API_USERS_EMPLOYEES=/api/users/employees
+REACT_APP_API_USERS_ADMINS=/api/users/admins
